{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 1250,
  "lineage": "d8cec491-a72a-523b-f910-230d903245a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:loadbalancer/app/test-alb/96250571ab1111e3",
            "arn_suffix": "app/test-alb/96250571ab1111e3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-test-alb-1178228926.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:loadbalancer/app/test-alb/96250571ab1111e3",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05a4f5803edf7c4f4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-009cce9e65e557e05"
              },
              {
                "subnet_id": "subnet-0b21eed3e20f51cd9"
              }
            ],
            "subnets": [
              "subnet-009cce9e65e557e05",
              "subnet-0b21eed3e20f51cd9"
            ],
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc_id": "vpc-091410130e4a1a342",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04974ef91b4c1a9d7",
            "arn": "arn:aws:ec2:eu-west-1:050451389344:elastic-ip/eipalloc-04974ef91b4c1a9d7",
            "association_id": "eipassoc-03284c8a884f4164a",
            "domain": "vpc",
            "id": "eipalloc-04974ef91b4c1a9d7",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0d06eb1eb3a10f891",
            "private_dns": "ip-10-0-16-189.eu-west-1.compute.internal",
            "private_ip": "10.0.16.189",
            "public_dns": "ec2-99-80-5-107.eu-west-1.compute.amazonaws.com",
            "public_ip": "99.80.5.107",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:internet-gateway/igw-06db904b053699f73",
            "id": "igw-06db904b053699f73",
            "owner_id": "050451389344",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc_id": "vpc-091410130e4a1a342"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:listener/app/test-alb/96250571ab1111e3/3038adb40c8a7df8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:targetgroup/test-tg/123e45e93434355a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:listener/app/test-alb/96250571ab1111e3/3038adb40c8a7df8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:loadbalancer/app/test-alb/96250571ab1111e3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:targetgroup/test-tg/123e45e93434355a",
            "arn_suffix": "targetgroup/test-tg/123e45e93434355a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:050451389344:targetgroup/test-tg/123e45e93434355a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:050451389344:loadbalancer/app/test-alb/96250571ab1111e3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "test-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-091410130e4a1a342"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04974ef91b4c1a9d7",
            "association_id": "eipassoc-03284c8a884f4164a",
            "connectivity_type": "public",
            "id": "nat-011f6893f541d7af8",
            "network_interface_id": "eni-0d06eb1eb3a10f891",
            "private_ip": "10.0.16.189",
            "public_ip": "99.80.5.107",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-009cce9e65e557e05",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            }
          },
          "dependencies": [
            "aws_eip.nateip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02916c8f693631c9a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-011f6893f541d7af8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02916c8f693631c9a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06db904b053699f73",
            "id": "r-rtb-0acb34055a7cfb82a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0acb34055a7cfb82a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:route-table/rtb-02916c8f693631c9a",
            "id": "rtb-02916c8f693631c9a",
            "owner_id": "050451389344",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-011f6893f541d7af8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-091410130e4a1a342"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:route-table/rtb-0acb34055a7cfb82a",
            "id": "rtb-0acb34055a7cfb82a",
            "owner_id": "050451389344",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06db904b053699f73",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-091410130e4a1a342"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022214d0462425002",
            "route_table_id": "rtb-02916c8f693631c9a",
            "subnet_id": "subnet-0f1bf1c1a348b45e2"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f649abaec1959c10",
            "route_table_id": "rtb-02916c8f693631c9a",
            "subnet_id": "subnet-0fc15570b59e3e840"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e8ceb3582477ee8",
            "route_table_id": "rtb-0acb34055a7cfb82a",
            "subnet_id": "subnet-009cce9e65e557e05"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0695d54f2f1771455",
            "route_table_id": "rtb-0acb34055a7cfb82a",
            "subnet_id": "subnet-0b21eed3e20f51cd9"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group/sg-05a4f5803edf7c4f4",
            "description": "Security group for alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from alb",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a4f5803edf7c4f4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow http inbound traffic from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-093e16443787be50e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo-sg-alb",
            "name_prefix": "",
            "owner_id": "050451389344",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-091410130e4a1a342"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group/sg-093e16443787be50e",
            "description": "Security group for api",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from api",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093e16443787be50e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http inbound traffic from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow https inbound traffic from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "demo-sg-api",
            "name_prefix": "",
            "owner_id": "050451389344",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-091410130e4a1a342"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group/sg-0d51a093a8188a6f8",
            "description": "Security group for ecs app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from ECS",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d51a093a8188a6f8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound traffic from ALB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-05a4f5803edf7c4f4"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "demo-sg-ecs",
            "name_prefix": "",
            "owner_id": "050451389344",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-091410130e4a1a342"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group/sg-04c3d4f6fde37e826",
            "description": "Security group for rds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from alb",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c3d4f6fde37e826",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow http inbound traffic from internet",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d51a093a8188a6f8"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "demo-sg-rds",
            "name_prefix": "",
            "owner_id": "050451389344",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-091410130e4a1a342"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:subnet/subnet-0f1bf1c1a348b45e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1bf1c1a348b45e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050451389344",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc_id": "vpc-091410130e4a1a342"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:subnet/subnet-0fc15570b59e3e840",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc15570b59e3e840",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050451389344",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc_id": "vpc-091410130e4a1a342"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:subnet/subnet-009cce9e65e557e05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009cce9e65e557e05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050451389344",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc_id": "vpc-091410130e4a1a342"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:subnet/subnet-0b21eed3e20f51cd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b21eed3e20f51cd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050451389344",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "vpc_id": "vpc-091410130e4a1a342"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:vpc/vpc-091410130e4a1a342",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02abfbb560fcd713b",
            "default_route_table_id": "rtb-00a65970c21087c61",
            "default_security_group_id": "sg-0469b38be9cf91576",
            "dhcp_options_id": "dopt-019857fe9b1724169",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-091410130e4a1a342",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00a65970c21087c61",
            "owner_id": "050451389344",
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-093379a911a73bac2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic from alb",
            "from_port": null,
            "id": "sgr-093379a911a73bac2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05a4f5803edf7c4f4",
            "security_group_rule_id": "sgr-093379a911a73bac2",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "api_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-0b81ee58d9cf39eea",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic from api",
            "from_port": null,
            "id": "sgr-0b81ee58d9cf39eea",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-093e16443787be50e",
            "security_group_rule_id": "sgr-0b81ee58d9cf39eea",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ecs_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-06cfc515c547e7385",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic from ECS",
            "from_port": null,
            "id": "sgr-06cfc515c547e7385",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d51a093a8188a6f8",
            "security_group_rule_id": "sgr-06cfc515c547e7385",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-0240b7b85198c8739",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic from alb",
            "from_port": null,
            "id": "sgr-0240b7b85198c8739",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04c3d4f6fde37e826",
            "security_group_rule_id": "sgr-0240b7b85198c8739",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-0c058dcae06ade882",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow http inbound traffic from internet",
            "from_port": 80,
            "id": "sgr-0c058dcae06ade882",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-093e16443787be50e",
            "security_group_id": "sg-05a4f5803edf7c4f4",
            "security_group_rule_id": "sgr-0c058dcae06ade882",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.api_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "api_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-0bc8330e0d38f7474",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow http inbound traffic from internet",
            "from_port": 80,
            "id": "sgr-0bc8330e0d38f7474",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-093e16443787be50e",
            "security_group_rule_id": "sgr-0bc8330e0d38f7474",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "api_https_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-0d22dd94b3cfa4d5f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow https inbound traffic from internet",
            "from_port": 443,
            "id": "sgr-0d22dd94b3cfa4d5f",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-093e16443787be50e",
            "security_group_rule_id": "sgr-0d22dd94b3cfa4d5f",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.api_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ecs_alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-01610ee478b65d7a3",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow inbound traffic from ALB",
            "from_port": null,
            "id": "sgr-01610ee478b65d7a3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-05a4f5803edf7c4f4",
            "security_group_id": "sg-0d51a093a8188a6f8",
            "security_group_rule_id": "sgr-01610ee478b65d7a3",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:050451389344:security-group-rule/sgr-0005ab395e7c25306",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow http inbound traffic from internet",
            "from_port": 5432,
            "id": "sgr-0005ab395e7c25306",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0d51a093a8188a6f8",
            "security_group_id": "sg-04c3d4f6fde37e826",
            "security_group_rule_id": "sgr-0005ab395e7c25306",
            "tags": null,
            "tags_all": {
              "Application": "Demo App",
              "Environment": "Dev"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_sg",
            "aws_security_group.rds_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}